# fw-analyzer

./: .gitignore  CONTEXT.md  README.en.md  README.md  fw-analyzer.toml.example  pyproject.toml
docs/: development.md  user-guide.md
fw_analyzer/: __init__.py  cli.py  config.py  trace.py
fw_analyzer/analyzers/: __init__.py  compliance.py  engine.py  overwidth.py  redundancy.py  shadow.py
fw_analyzer/api/: __init__.py  dependencies.py  main.py  schemas.py
fw_analyzer/api/routers/: __init__.py  analyze.py  parse.py  sessions.py  trace.py
fw_analyzer/exporters/: __init__.py  csv_exporter.py  json_exporter.py  markdown_exporter.py  raw_text_extractor.py  shadow_detail_exporter.py
fw_analyzer/models/: __init__.py  ip_utils.py  object_store.py  port_range.py  rule.py
fw_analyzer/parsers/: __init__.py  base.py  cisco_asa.py  detector.py  fortinet.py  huawei.py  palo_alto.py  palo_alto_set.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_config.py  test_exporters.py  test_models.py  test_parsers.py  test_trace.py
tests/fixtures/: cisco_asa_complex.cfg  cisco_asa_simple.cfg  fortinet_complex.cfg  fortinet_simple.cfg  huawei_complex.cfg  huawei_simple.cfg  paloalto_complex.xml  paloalto_set_complex.cfg  paloalto_set_simple.cfg  paloalto_simple.xml
